namespace InventoryManagementSystem
{
    internal class Program
    {

        

        static void Main(string[] args)
        {
            MyInventorySystem myInventorySystem = new MyInventorySystem();
            myInventorySystem.Run();



        }
    }
}
